parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> linst
Rule 2     linst -> linst inst
Rule 3     linst -> inst
Rule 4     inst -> NAME EQUAL expression COLON
Rule 5     inst -> PRINT LPAREN expression RPAREN COLON
Rule 6     inst -> PRINT LPAREN lexp RPAREN COLON
Rule 7     inst -> IF LPAREN expression RPAREN LACCO linst RACCO
Rule 8     inst -> IF LPAREN expression RPAREN LACCO linst RACCO ELSE LACCO linst RACCO
Rule 9     inst -> inst WHILE LPAREN expression RPAREN LACCO linst RACCO
Rule 10    inst -> FOR LPAREN inst expression COLON inst RPAREN LACCO linst RACCO
Rule 11    inst -> VOID NAME LPAREN RPAREN LACCO linst RACCO COLON
Rule 12    inst -> VOID NAME LPAREN expression RPAREN LACCO linst RACCO COLON
Rule 13    inst -> VOID NAME LPAREN lexp RPAREN LACCO linst RACCO COLON
Rule 14    inst -> NAME LPAREN RPAREN COLON
Rule 15    inst -> NAME LPAREN expression RPAREN COLON
Rule 16    inst -> NAME LPAREN lexp RPAREN COLON
Rule 17    expression -> expression PLUS expression
Rule 18    expression -> expression PLUS PLUS
Rule 19    expression -> expression DOTS expression
Rule 20    expression -> expression TIMES TIMES expression
Rule 21    expression -> expression PLUS EQUAL expression
Rule 22    expression -> expression MINUS expression
Rule 23    expression -> expression MINUS MINUS
Rule 24    expression -> expression MINUS EQUAL expression
Rule 25    expression -> expression TIMES expression
Rule 26    expression -> expression TIMES EQUAL expression
Rule 27    expression -> expression OR expression
Rule 28    expression -> expression AND expression
Rule 29    expression -> expression EQUALS expression
Rule 30    expression -> expression LOWER expression
Rule 31    expression -> expression HIGHER expression
Rule 32    expression -> expression DIVIDE expression
Rule 33    expression -> expression DIVIDE EQUAL expression
Rule 34    expression -> LPAREN expression RPAREN
Rule 35    expression -> NUMBER
Rule 36    expression -> GUI NUMBER GUI
Rule 37    expression -> NAME
Rule 38    expression -> GUI NAME GUI
Rule 39    lexp -> expression COLON expression
Rule 40    lexp -> lexp COLON expression

Terminals, with rules where they appear

AND                  : 28
COLON                : 4 5 6 10 11 12 13 14 15 16 39 40
DIVIDE               : 32 33
DOTS                 : 19
ELSE                 : 8
EQUAL                : 4 21 24 26 33
EQUALS               : 29
FOR                  : 10
GUI                  : 36 36 38 38
HIGHER               : 31
IF                   : 7 8
LACCO                : 7 8 8 9 10 11 12 13
LOWER                : 30
LPAREN               : 5 6 7 8 9 10 11 12 13 14 15 16 34
MINUS                : 22 23 23 24
NAME                 : 4 11 12 13 14 15 16 37 38
NUMBER               : 35 36
OR                   : 27
PLUS                 : 17 18 18 21
PRINT                : 5 6
RACCO                : 7 8 8 9 10 11 12 13
RPAREN               : 5 6 7 8 9 10 11 12 13 14 15 16 34
TIMES                : 20 20 25 26
VOID                 : 11 12 13
WHILE                : 9
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 7 8 9 10 12 15 17 17 18 19 19 20 20 21 21 22 22 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 39 39 40
inst                 : 2 3 9 10 10
lexp                 : 6 13 16 40
linst                : 1 2 7 8 8 9 10 11 12 13
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . linst
    (2) linst -> . linst inst
    (3) linst -> . inst
    (4) inst -> . NAME EQUAL expression COLON
    (5) inst -> . PRINT LPAREN expression RPAREN COLON
    (6) inst -> . PRINT LPAREN lexp RPAREN COLON
    (7) inst -> . IF LPAREN expression RPAREN LACCO linst RACCO
    (8) inst -> . IF LPAREN expression RPAREN LACCO linst RACCO ELSE LACCO linst RACCO
    (9) inst -> . inst WHILE LPAREN expression RPAREN LACCO linst RACCO
    (10) inst -> . FOR LPAREN inst expression COLON inst RPAREN LACCO linst RACCO
    (11) inst -> . VOID NAME LPAREN RPAREN LACCO linst RACCO COLON
    (12) inst -> . VOID NAME LPAREN expression RPAREN LACCO linst RACCO COLON
    (13) inst -> . VOID NAME LPAREN lexp RPAREN LACCO linst RACCO COLON
    (14) inst -> . NAME LPAREN RPAREN COLON
    (15) inst -> . NAME LPAREN expression RPAREN COLON
    (16) inst -> . NAME LPAREN lexp RPAREN COLON

    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 6
    FOR             shift and go to state 7
    VOID            shift and go to state 8

    start                          shift and go to state 1
    linst                          shift and go to state 2
    inst                           shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> linst .
    (2) linst -> linst . inst
    (4) inst -> . NAME EQUAL expression COLON
    (5) inst -> . PRINT LPAREN expression RPAREN COLON
    (6) inst -> . PRINT LPAREN lexp RPAREN COLON
    (7) inst -> . IF LPAREN expression RPAREN LACCO linst RACCO
    (8) inst -> . IF LPAREN expression RPAREN LACCO linst RACCO ELSE LACCO linst RACCO
    (9) inst -> . inst WHILE LPAREN expression RPAREN LACCO linst RACCO
    (10) inst -> . FOR LPAREN inst expression COLON inst RPAREN LACCO linst RACCO
    (11) inst -> . VOID NAME LPAREN RPAREN LACCO linst RACCO COLON
    (12) inst -> . VOID NAME LPAREN expression RPAREN LACCO linst RACCO COLON
    (13) inst -> . VOID NAME LPAREN lexp RPAREN LACCO linst RACCO COLON
    (14) inst -> . NAME LPAREN RPAREN COLON
    (15) inst -> . NAME LPAREN expression RPAREN COLON
    (16) inst -> . NAME LPAREN lexp RPAREN COLON

    $end            reduce using rule 1 (start -> linst .)
    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 6
    FOR             shift and go to state 7
    VOID            shift and go to state 8

    inst                           shift and go to state 9

state 3

    (3) linst -> inst .
    (9) inst -> inst . WHILE LPAREN expression RPAREN LACCO linst RACCO

    NAME            reduce using rule 3 (linst -> inst .)
    PRINT           reduce using rule 3 (linst -> inst .)
    IF              reduce using rule 3 (linst -> inst .)
    FOR             reduce using rule 3 (linst -> inst .)
    VOID            reduce using rule 3 (linst -> inst .)
    $end            reduce using rule 3 (linst -> inst .)
    RACCO           reduce using rule 3 (linst -> inst .)
    WHILE           shift and go to state 10


state 4

    (4) inst -> NAME . EQUAL expression COLON
    (14) inst -> NAME . LPAREN RPAREN COLON
    (15) inst -> NAME . LPAREN expression RPAREN COLON
    (16) inst -> NAME . LPAREN lexp RPAREN COLON

    EQUAL           shift and go to state 11
    LPAREN          shift and go to state 12


state 5

    (5) inst -> PRINT . LPAREN expression RPAREN COLON
    (6) inst -> PRINT . LPAREN lexp RPAREN COLON

    LPAREN          shift and go to state 13


state 6

    (7) inst -> IF . LPAREN expression RPAREN LACCO linst RACCO
    (8) inst -> IF . LPAREN expression RPAREN LACCO linst RACCO ELSE LACCO linst RACCO

    LPAREN          shift and go to state 14


state 7

    (10) inst -> FOR . LPAREN inst expression COLON inst RPAREN LACCO linst RACCO

    LPAREN          shift and go to state 15


state 8

    (11) inst -> VOID . NAME LPAREN RPAREN LACCO linst RACCO COLON
    (12) inst -> VOID . NAME LPAREN expression RPAREN LACCO linst RACCO COLON
    (13) inst -> VOID . NAME LPAREN lexp RPAREN LACCO linst RACCO COLON

    NAME            shift and go to state 16


state 9

    (2) linst -> linst inst .
    (9) inst -> inst . WHILE LPAREN expression RPAREN LACCO linst RACCO

    NAME            reduce using rule 2 (linst -> linst inst .)
    PRINT           reduce using rule 2 (linst -> linst inst .)
    IF              reduce using rule 2 (linst -> linst inst .)
    FOR             reduce using rule 2 (linst -> linst inst .)
    VOID            reduce using rule 2 (linst -> linst inst .)
    $end            reduce using rule 2 (linst -> linst inst .)
    RACCO           reduce using rule 2 (linst -> linst inst .)
    WHILE           shift and go to state 10


state 10

    (9) inst -> inst WHILE . LPAREN expression RPAREN LACCO linst RACCO

    LPAREN          shift and go to state 17


state 11

    (4) inst -> NAME EQUAL . expression COLON
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression PLUS PLUS
    (19) expression -> . expression DOTS expression
    (20) expression -> . expression TIMES TIMES expression
    (21) expression -> . expression PLUS EQUAL expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MINUS MINUS
    (24) expression -> . expression MINUS EQUAL expression
    (25) expression -> . expression TIMES expression
    (26) expression -> . expression TIMES EQUAL expression
    (27) expression -> . expression OR expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression EQUALS expression
    (30) expression -> . expression LOWER expression
    (31) expression -> . expression HIGHER expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression DIVIDE EQUAL expression
    (34) expression -> . LPAREN expression RPAREN
    (35) expression -> . NUMBER
    (36) expression -> . GUI NUMBER GUI
    (37) expression -> . NAME
    (38) expression -> . GUI NAME GUI

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    GUI             shift and go to state 22
    NAME            shift and go to state 18

    expression                     shift and go to state 19

state 12

    (14) inst -> NAME LPAREN . RPAREN COLON
    (15) inst -> NAME LPAREN . expression RPAREN COLON
    (16) inst -> NAME LPAREN . lexp RPAREN COLON
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression PLUS PLUS
    (19) expression -> . expression DOTS expression
    (20) expression -> . expression TIMES TIMES expression
    (21) expression -> . expression PLUS EQUAL expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MINUS MINUS
    (24) expression -> . expression MINUS EQUAL expression
    (25) expression -> . expression TIMES expression
    (26) expression -> . expression TIMES EQUAL expression
    (27) expression -> . expression OR expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression EQUALS expression
    (30) expression -> . expression LOWER expression
    (31) expression -> . expression HIGHER expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression DIVIDE EQUAL expression
    (34) expression -> . LPAREN expression RPAREN
    (35) expression -> . NUMBER
    (36) expression -> . GUI NUMBER GUI
    (37) expression -> . NAME
    (38) expression -> . GUI NAME GUI
    (39) lexp -> . expression COLON expression
    (40) lexp -> . lexp COLON expression

    RPAREN          shift and go to state 23
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    GUI             shift and go to state 22
    NAME            shift and go to state 18

    expression                     shift and go to state 24
    lexp                           shift and go to state 25

state 13

    (5) inst -> PRINT LPAREN . expression RPAREN COLON
    (6) inst -> PRINT LPAREN . lexp RPAREN COLON
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression PLUS PLUS
    (19) expression -> . expression DOTS expression
    (20) expression -> . expression TIMES TIMES expression
    (21) expression -> . expression PLUS EQUAL expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MINUS MINUS
    (24) expression -> . expression MINUS EQUAL expression
    (25) expression -> . expression TIMES expression
    (26) expression -> . expression TIMES EQUAL expression
    (27) expression -> . expression OR expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression EQUALS expression
    (30) expression -> . expression LOWER expression
    (31) expression -> . expression HIGHER expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression DIVIDE EQUAL expression
    (34) expression -> . LPAREN expression RPAREN
    (35) expression -> . NUMBER
    (36) expression -> . GUI NUMBER GUI
    (37) expression -> . NAME
    (38) expression -> . GUI NAME GUI
    (39) lexp -> . expression COLON expression
    (40) lexp -> . lexp COLON expression

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    GUI             shift and go to state 22
    NAME            shift and go to state 18

    expression                     shift and go to state 26
    lexp                           shift and go to state 27

state 14

    (7) inst -> IF LPAREN . expression RPAREN LACCO linst RACCO
    (8) inst -> IF LPAREN . expression RPAREN LACCO linst RACCO ELSE LACCO linst RACCO
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression PLUS PLUS
    (19) expression -> . expression DOTS expression
    (20) expression -> . expression TIMES TIMES expression
    (21) expression -> . expression PLUS EQUAL expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MINUS MINUS
    (24) expression -> . expression MINUS EQUAL expression
    (25) expression -> . expression TIMES expression
    (26) expression -> . expression TIMES EQUAL expression
    (27) expression -> . expression OR expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression EQUALS expression
    (30) expression -> . expression LOWER expression
    (31) expression -> . expression HIGHER expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression DIVIDE EQUAL expression
    (34) expression -> . LPAREN expression RPAREN
    (35) expression -> . NUMBER
    (36) expression -> . GUI NUMBER GUI
    (37) expression -> . NAME
    (38) expression -> . GUI NAME GUI

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    GUI             shift and go to state 22
    NAME            shift and go to state 18

    expression                     shift and go to state 28

state 15

    (10) inst -> FOR LPAREN . inst expression COLON inst RPAREN LACCO linst RACCO
    (4) inst -> . NAME EQUAL expression COLON
    (5) inst -> . PRINT LPAREN expression RPAREN COLON
    (6) inst -> . PRINT LPAREN lexp RPAREN COLON
    (7) inst -> . IF LPAREN expression RPAREN LACCO linst RACCO
    (8) inst -> . IF LPAREN expression RPAREN LACCO linst RACCO ELSE LACCO linst RACCO
    (9) inst -> . inst WHILE LPAREN expression RPAREN LACCO linst RACCO
    (10) inst -> . FOR LPAREN inst expression COLON inst RPAREN LACCO linst RACCO
    (11) inst -> . VOID NAME LPAREN RPAREN LACCO linst RACCO COLON
    (12) inst -> . VOID NAME LPAREN expression RPAREN LACCO linst RACCO COLON
    (13) inst -> . VOID NAME LPAREN lexp RPAREN LACCO linst RACCO COLON
    (14) inst -> . NAME LPAREN RPAREN COLON
    (15) inst -> . NAME LPAREN expression RPAREN COLON
    (16) inst -> . NAME LPAREN lexp RPAREN COLON

    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 6
    FOR             shift and go to state 7
    VOID            shift and go to state 8

    inst                           shift and go to state 29

state 16

    (11) inst -> VOID NAME . LPAREN RPAREN LACCO linst RACCO COLON
    (12) inst -> VOID NAME . LPAREN expression RPAREN LACCO linst RACCO COLON
    (13) inst -> VOID NAME . LPAREN lexp RPAREN LACCO linst RACCO COLON

    LPAREN          shift and go to state 30


state 17

    (9) inst -> inst WHILE LPAREN . expression RPAREN LACCO linst RACCO
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression PLUS PLUS
    (19) expression -> . expression DOTS expression
    (20) expression -> . expression TIMES TIMES expression
    (21) expression -> . expression PLUS EQUAL expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MINUS MINUS
    (24) expression -> . expression MINUS EQUAL expression
    (25) expression -> . expression TIMES expression
    (26) expression -> . expression TIMES EQUAL expression
    (27) expression -> . expression OR expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression EQUALS expression
    (30) expression -> . expression LOWER expression
    (31) expression -> . expression HIGHER expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression DIVIDE EQUAL expression
    (34) expression -> . LPAREN expression RPAREN
    (35) expression -> . NUMBER
    (36) expression -> . GUI NUMBER GUI
    (37) expression -> . NAME
    (38) expression -> . GUI NAME GUI

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    GUI             shift and go to state 22
    NAME            shift and go to state 18

    expression                     shift and go to state 31

state 18

    (37) expression -> NAME .

    COLON           reduce using rule 37 (expression -> NAME .)
    PLUS            reduce using rule 37 (expression -> NAME .)
    DOTS            reduce using rule 37 (expression -> NAME .)
    TIMES           reduce using rule 37 (expression -> NAME .)
    MINUS           reduce using rule 37 (expression -> NAME .)
    OR              reduce using rule 37 (expression -> NAME .)
    AND             reduce using rule 37 (expression -> NAME .)
    EQUALS          reduce using rule 37 (expression -> NAME .)
    LOWER           reduce using rule 37 (expression -> NAME .)
    HIGHER          reduce using rule 37 (expression -> NAME .)
    DIVIDE          reduce using rule 37 (expression -> NAME .)
    RPAREN          reduce using rule 37 (expression -> NAME .)


state 19

    (4) inst -> NAME EQUAL expression . COLON
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . PLUS PLUS
    (19) expression -> expression . DOTS expression
    (20) expression -> expression . TIMES TIMES expression
    (21) expression -> expression . PLUS EQUAL expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . MINUS MINUS
    (24) expression -> expression . MINUS EQUAL expression
    (25) expression -> expression . TIMES expression
    (26) expression -> expression . TIMES EQUAL expression
    (27) expression -> expression . OR expression
    (28) expression -> expression . AND expression
    (29) expression -> expression . EQUALS expression
    (30) expression -> expression . LOWER expression
    (31) expression -> expression . HIGHER expression
    (32) expression -> expression . DIVIDE expression
    (33) expression -> expression . DIVIDE EQUAL expression

    COLON           shift and go to state 32
    PLUS            shift and go to state 33
    DOTS            shift and go to state 34
    TIMES           shift and go to state 35
    MINUS           shift and go to state 36
    OR              shift and go to state 37
    AND             shift and go to state 38
    EQUALS          shift and go to state 39
    LOWER           shift and go to state 40
    HIGHER          shift and go to state 41
    DIVIDE          shift and go to state 42


state 20

    (34) expression -> LPAREN . expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression PLUS PLUS
    (19) expression -> . expression DOTS expression
    (20) expression -> . expression TIMES TIMES expression
    (21) expression -> . expression PLUS EQUAL expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MINUS MINUS
    (24) expression -> . expression MINUS EQUAL expression
    (25) expression -> . expression TIMES expression
    (26) expression -> . expression TIMES EQUAL expression
    (27) expression -> . expression OR expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression EQUALS expression
    (30) expression -> . expression LOWER expression
    (31) expression -> . expression HIGHER expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression DIVIDE EQUAL expression
    (34) expression -> . LPAREN expression RPAREN
    (35) expression -> . NUMBER
    (36) expression -> . GUI NUMBER GUI
    (37) expression -> . NAME
    (38) expression -> . GUI NAME GUI

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    GUI             shift and go to state 22
    NAME            shift and go to state 18

    expression                     shift and go to state 43

state 21

    (35) expression -> NUMBER .

    COLON           reduce using rule 35 (expression -> NUMBER .)
    PLUS            reduce using rule 35 (expression -> NUMBER .)
    DOTS            reduce using rule 35 (expression -> NUMBER .)
    TIMES           reduce using rule 35 (expression -> NUMBER .)
    MINUS           reduce using rule 35 (expression -> NUMBER .)
    OR              reduce using rule 35 (expression -> NUMBER .)
    AND             reduce using rule 35 (expression -> NUMBER .)
    EQUALS          reduce using rule 35 (expression -> NUMBER .)
    LOWER           reduce using rule 35 (expression -> NUMBER .)
    HIGHER          reduce using rule 35 (expression -> NUMBER .)
    DIVIDE          reduce using rule 35 (expression -> NUMBER .)
    RPAREN          reduce using rule 35 (expression -> NUMBER .)


state 22

    (36) expression -> GUI . NUMBER GUI
    (38) expression -> GUI . NAME GUI

    NUMBER          shift and go to state 44
    NAME            shift and go to state 45


state 23

    (14) inst -> NAME LPAREN RPAREN . COLON

    COLON           shift and go to state 46


state 24
